syntax="proto3";
package rpc;

message C2SAuth
{
	 int32 accountType = 1;
	 LoginArgs loginArgs = 2;	
}
message AuthData
{
	 LoginArgs args = 1;
	 LoginResp resp = 2;
}
message S2CAuth
{
	 AuthResult result = 1;
	 string accountID = 2;
	 string accountName = 3;
	 string token = 4;	
}
message S2CKickOut
{
	 KickReason reason = 1;
}
message LoginArgs 
{
	 int32 pkg = 1;	
	 int32 authType = 2; 
	 string token = 3;
	 string version = 4; 
	 int32 devType = 5; 
	 string devDesc = 6; 
	 string did = 7;
	 int64 time = 8;
	 string ip = 9;	
	 string param = 10;			// md5(authType + token + devType + did + time)
}
enum AuthResult
{
	AR_Fail = 0;
	AR_Ok = 1;
	AR_ConnectionMax = 2;
	AR_DupLogin = 3;
	AR_TokenInvalid = 4;
	AR_ForbidLogin = 5;	
	AR_AuthNone = 6;
	AR_LobbyNone = 7;
	AR_VersionErr = 8;	
	AR_NotOpen = 9;
	AR_ParamInvalid = 10;
};
message LoginResp
{
	 AuthResult result = 1;
	 int32 accountType = 2;
	 string accountID = 3;
	 string accountName = 4;
	 string param = 7;
}
enum KickReason
{
	KR_DupLogin = 0;
	KR_Forbid = 1;
}
message A2C_AuthToken
{
	 AuthResult result = 1;
	 LoginArgs args = 2;
	 LoginResp resp = 3;
	 int32 clientId = 4;
	 string token = 5;
	 int64 uid = 6;
}
message A2C_KickLogin
{
	 string account = 1;
	 int64 uniConnId = 2;
	 KickReason reason = 3;
}
message C2A_Logout
{
	 string account = 1;
	 string token = 2;
	 int64 uniConnId = 3;
}
message C2A_Uid2Guid
{
	int64 uid = 1;
	int64 guid = 2;
}
enum AuthType
{
	AT_Unknown = 0;
	AT_Internal = 1;		// 
	AT_Apple = 2;			// 苹果
	AT_WeiXin = 3;			// 微信
	AT_Phone = 4;			// 手机
	AT_HuaWei = 5;			// 华为
	AT_Oppo = 6;			//
	AT_WeiXinMG = 7;		// 微信小游戏
	AT_Vivo = 8;			// 
	AT_MI = 9;
};
message Request
{
	string method = 1;
	bytes serialized_request = 2;
}
