//auto make,please edit!!! 
export namespace ProtoDef {
	export const rpc = {
		C2SAuth : "rpc.C2SAuth",
		AuthData : "rpc.AuthData",
		S2CAuth : "rpc.S2CAuth",
		S2CKickOut : "rpc.S2CKickOut",
		LoginArgs : "rpc.LoginArgs",
		LoginResp : "rpc.LoginResp",
		A2C_AuthToken : "rpc.A2C_AuthToken",
		A2C_KickLogin : "rpc.A2C_KickLogin",
		C2A_Logout : "rpc.C2A_Logout",
		C2A_Uid2Guid : "rpc.C2A_Uid2Guid",
		Request : "rpc.Request",
	}
	export const msg = {
	}
	export const pb = {
		C2SLogoffAccount : "pb.C2SLogoffAccount",
		C2SUnLogoffAccount : "pb.C2SUnLogoffAccount",
		C2SASKAchievData : "pb.C2SASKAchievData",
		S2CReplyAchiev : "pb.S2CReplyAchiev",
		C2SAchievReward : "pb.C2SAchievReward",
		S2CAchievReward : "pb.S2CAchievReward",
		C2SAchievCfg : "pb.C2SAchievCfg",
		S2CAchievCfg : "pb.S2CAchievCfg",
		AchievData : "pb.AchievData",
		AchievCfg : "pb.AchievCfg",
		Id2Val : "pb.Id2Val",
		ValRange : "pb.ValRange",
		ActivityInfo : "pb.ActivityInfo",
		C2SActivityInfo : "pb.C2SActivityInfo",
		S2CActivityInfo : "pb.S2CActivityInfo",
		C2SActivityData : "pb.C2SActivityData",
		ActivityData : "pb.ActivityData",
		S2CActivityData : "pb.S2CActivityData",
		C2SDoActivity : "pb.C2SDoActivity",
		S2CDoActivity : "pb.S2CDoActivity",
		TurntableActCfg : "pb.TurntableActCfg",
		TableItem : "pb.TableItem",
		LoginActCfg : "pb.LoginActCfg",
		LoginActItem : "pb.LoginActItem",
		ActivityCfg : "pb.ActivityCfg",
		Item : "pb.Item",
		C2SGetAdReward : "pb.C2SGetAdReward",
		AdRewardItem : "pb.AdRewardItem",
		S2CAdCfgs : "pb.S2CAdCfgs",
		AdData : "pb.AdData",
		C2SAdStart : "pb.C2SAdStart",
		C2SAdEnd : "pb.C2SAdEnd",
		AdLoopItem : "pb.AdLoopItem",
		C2SPing : "pb.C2SPing",
		S2CPing : "pb.S2CPing",
		S2CCfgs : "pb.S2CCfgs",
		C2SEmojiCfgs : "pb.C2SEmojiCfgs",
		EmojiPrice : "pb.EmojiPrice",
		EmojiCfg : "pb.EmojiCfg",
		S2CEmojiCfgs : "pb.S2CEmojiCfgs",
		C2SChat : "pb.C2SChat",
		S2CChat : "pb.S2CChat",
		S2CError : "pb.S2CError",
		Time : "pb.Time",
		S2CServerInfo : "pb.S2CServerInfo",
		C2SCmd : "pb.C2SCmd",
		S2CDouTableInfo : "pb.S2CDouTableInfo",
		S2CDouPlayerEnter : "pb.S2CDouPlayerEnter",
		C2SDouReady : "pb.C2SDouReady",
		S2CDouReady : "pb.S2CDouReady",
		S2CDouStart : "pb.S2CDouStart",
		S2CDouAddCards : "pb.S2CDouAddCards",
		S2CDouCurChooseLandlord : "pb.S2CDouCurChooseLandlord",
		C2SDouChooseLandlord : "pb.C2SDouChooseLandlord",
		S2CDouChooseLandlord : "pb.S2CDouChooseLandlord",
		S2CDouSetLandlord : "pb.S2CDouSetLandlord",
		S2CDouDoubleStart : "pb.S2CDouDoubleStart",
		C2SDouDouble : "pb.C2SDouDouble",
		S2CDouDouble : "pb.S2CDouDouble",
		S2CDouPlayPos : "pb.S2CDouPlayPos",
		C2SDouPlayCards : "pb.C2SDouPlayCards",
		S2CDouPlayCards : "pb.S2CDouPlayCards",
		S2CDouSettlement : "pb.S2CDouSettlement",
		C2SDouSetTrusteeship : "pb.C2SDouSetTrusteeship",
		S2CDouSetTrusteeship : "pb.S2CDouSetTrusteeship",
		S2CDouBombDouble : "pb.S2CDouBombDouble",
		S2CDouMultiple : "pb.S2CDouMultiple",
		S2CDouLiuJu : "pb.S2CDouLiuJu",
		S2CDouRestart : "pb.S2CDouRestart",
		C2SDouStartNext : "pb.C2SDouStartNext",
		S2CDouStartNext : "pb.S2CDouStartNext",
		C2SDouSeeFinal : "pb.C2SDouSeeFinal",
		S2CDouViewCards : "pb.S2CDouViewCards",
		S2CDouSeeFinal : "pb.S2CDouSeeFinal",
		C2SDouUseRecorder : "pb.C2SDouUseRecorder",
		S2CDouUseRecorder : "pb.S2CDouUseRecorder",
		S2CDouRecorderInfo : "pb.S2CDouRecorderInfo",
		TableInfo : "pb.TableInfo",
		TablePlayer : "pb.TablePlayer",
		TableCommon : "pb.TableCommon",
		Player : "pb.Player",
		S2CUpdatePlayer : "pb.S2CUpdatePlayer",
		S2CPlayerAttr : "pb.S2CPlayerAttr",
		S2CCurrency : "pb.S2CCurrency",
		S2CGroupValue : "pb.S2CGroupValue",
		C2SViewPlayer : "pb.C2SViewPlayer",
		S2CViewPlayer : "pb.S2CViewPlayer",
		C2SSyncState : "pb.C2SSyncState",
		S2CSyncState : "pb.S2CSyncState",
		S2CQuickStart : "pb.S2CQuickStart",
		LbsData : "pb.LbsData",
		S2CMyLbs : "pb.S2CMyLbs",
		GroupValue : "pb.GroupValue",
		DouCard : "pb.DouCard",
		DouCardRecord : "pb.DouCardRecord",
		DouPlayerCards : "pb.DouPlayerCards",
		DouTableInfo : "pb.DouTableInfo",
		DouPlayerInfo : "pb.DouPlayerInfo",
		DouSettleInfo : "pb.DouSettleInfo",
		DouCards : "pb.DouCards",
		DouCardGroup : "pb.DouCardGroup",
		DouRule : "pb.DouRule",
		S2CGameEndGiftValue : "pb.S2CGameEndGiftValue",
		C2SNoLoseWinMore : "pb.C2SNoLoseWinMore",
		S2CNoLoseWinMore : "pb.S2CNoLoseWinMore",
		C2SGenAuthCode : "pb.C2SGenAuthCode",
		C2SGobackLobby : "pb.C2SGobackLobby",
		C2SGetGradeReward : "pb.C2SGetGradeReward",
		S2CGetGradeReward : "pb.S2CGetGradeReward",
		GradeCfg : "pb.GradeCfg",
		C2SGradeCfgs : "pb.C2SGradeCfgs",
		S2CGradeCfgs : "pb.S2CGradeCfgs",
		C2SGames : "pb.C2SGames",
		GameItem : "pb.GameItem",
		S2CGames : "pb.S2CGames",
		C2SEnterGame : "pb.C2SEnterGame",
		S2CBackLobby : "pb.S2CBackLobby",
		C2SQuickStart : "pb.C2SQuickStart",
		C2SLogin : "pb.C2SLogin",
		S2CLogin : "pb.S2CLogin",
		C2SLogined : "pb.C2SLogined",
		S2CMahNewPlayerEnter : "pb.S2CMahNewPlayerEnter",
		S2CMahResetTable : "pb.S2CMahResetTable",
		S2CMahTableData : "pb.S2CMahTableData",
		S2CMahUpdateTableAndPlayerState : "pb.S2CMahUpdateTableAndPlayerState",
		S2CGameBegin : "pb.S2CGameBegin",
		C2SMahReady : "pb.C2SMahReady",
		S2CMahFaPai : "pb.S2CMahFaPai",
		S2CMahHSZNotify : "pb.S2CMahHSZNotify",
		C2SMahHSZ : "pb.C2SMahHSZ",
		S2CMahHSZResult : "pb.S2CMahHSZResult",
		S2CMahDingQueNotify : "pb.S2CMahDingQueNotify",
		C2SMahDingQue : "pb.C2SMahDingQue",
		S2CMahDingQueResult : "pb.S2CMahDingQueResult",
		S2CMahMoPai : "pb.S2CMahMoPai",
		C2SMahChuPai : "pb.C2SMahChuPai",
		S2CMahChuPai : "pb.S2CMahChuPai",
		S2CMahHasHPG : "pb.S2CMahHasHPG",
		C2SMahHPG : "pb.C2SMahHPG",
		S2CMahPGResult : "pb.S2CMahPGResult",
		S2CMahHuResult : "pb.S2CMahHuResult",
		S2CMahAuto : "pb.S2CMahAuto",
		C2SMahAuto : "pb.C2SMahAuto",
		S2CMahInningOverData : "pb.S2CMahInningOverData",
		S2CMahGamePoChan : "pb.S2CMahGamePoChan",
		S2CMahHPGDone : "pb.S2CMahHPGDone",
		C2SMahLiuShui : "pb.C2SMahLiuShui",
		S2CMahLiuShui : "pb.S2CMahLiuShui",
		S2CMahTiShi : "pb.S2CMahTiShi",
		C2SMahHuPaiTiShi : "pb.C2SMahHuPaiTiShi",
		S2CMHuPaiTiShi : "pb.S2CMHuPaiTiShi",
		C2SMahAutoUseProp : "pb.C2SMahAutoUseProp",
		S2CMahAutoUseProp : "pb.S2CMahAutoUseProp",
		C2SMahTestMsg : "pb.C2SMahTestMsg",
		S2CUpdateJinZhongZhao : "pb.S2CUpdateJinZhongZhao",
		S2CMahPropResult : "pb.S2CMahPropResult",
		S2CMahUseMoProp : "pb.S2CMahUseMoProp",
		S2CMahMingPai : "pb.S2CMahMingPai",
		C2SMahMingPai : "pb.C2SMahMingPai",
		S2CMahBetterMjSuggestion : "pb.S2CMahBetterMjSuggestion",
		C2SMahSet : "pb.C2SMahSet",
		S2CMahSet : "pb.S2CMahSet",
		S2CRobotCardsInfo : "pb.S2CRobotCardsInfo",
		CoinData : "pb.CoinData",
		MahHuData : "pb.MahHuData",
		KeHuItem : "pb.KeHuItem",
		MahKeHuData : "pb.MahKeHuData",
		MahPengGang : "pb.MahPengGang",
		MahTableGameData : "pb.MahTableGameData",
		KeCaoZuo : "pb.KeCaoZuo",
		MahPlayerData : "pb.MahPlayerData",
		MahInningResult : "pb.MahInningResult",
		MahLiuShui : "pb.MahLiuShui",
		MahTableRule : "pb.MahTableRule",
		MahXLHZRuleData : "pb.MahXLHZRuleData",
		C2SMails : "pb.C2SMails",
		S2CMails : "pb.S2CMails",
		C2SReadMail : "pb.C2SReadMail",
		S2CReadMail : "pb.S2CReadMail",
		C2SGetMailAtta : "pb.C2SGetMailAtta",
		S2CGetMailAtta : "pb.S2CGetMailAtta",
		C2SDelMail : "pb.C2SDelMail",
		S2CDelMail : "pb.S2CDelMail",
		UserMail : "pb.UserMail",
		C2SGetMoney : "pb.C2SGetMoney",
		S2CGetMoney : "pb.S2CGetMoney",
		C2SGetMoneyDetail : "pb.C2SGetMoneyDetail",
		S2CGetMoneyDetail : "pb.S2CGetMoneyDetail",
		C2SGetMoneyCfgs : "pb.C2SGetMoneyCfgs",
		S2CGetMoneyCfgs : "pb.S2CGetMoneyCfgs",
		S2CGiveBeginnerMoney : "pb.S2CGiveBeginnerMoney",
		C2SGetInviteList : "pb.C2SGetInviteList",
		InviteItem : "pb.InviteItem",
		S2CGetInviteList : "pb.S2CGetInviteList",
		GetMoneyCfg : "pb.GetMoneyCfg",
		GetMoneyDetail : "pb.GetMoneyDetail",
		C2SActNotice : "pb.C2SActNotice",
		S2CActNotice : "pb.S2CActNotice",
		S2CRollingNotice : "pb.S2CRollingNotice",
		S2CDeleteNotice : "pb.S2CDeleteNotice",
		S2CUISwitches : "pb.S2CUISwitches",
		LoginNotice : "pb.LoginNotice",
		RollingNotice : "pb.RollingNotice",
		UiItem : "pb.UiItem",
		UISwitchGroup : "pb.UISwitchGroup",
		DeleteNotice : "pb.DeleteNotice",
		C2SIapGetOrderId : "pb.C2SIapGetOrderId",
		S2CIapGetOrderId : "pb.S2CIapGetOrderId",
		C2SIapReceipt : "pb.C2SIapReceipt",
		S2CIapSucc : "pb.S2CIapSucc",
		GenOrderItem : "pb.GenOrderItem",
		PlayerShowBase : "pb.PlayerShowBase",
		C2SHasPoChan : "pb.C2SHasPoChan",
		S2CPoChanMsg : "pb.S2CPoChanMsg",
		C2SPoChanMsg : "pb.C2SPoChanMsg",
		S2CGetPoChanReWard : "pb.S2CGetPoChanReWard",
		C2SPoChangAdStart : "pb.C2SPoChangAdStart",
		PoChanData : "pb.PoChanData",
		C2SGetBag : "pb.C2SGetBag",
		S2CGetBag : "pb.S2CGetBag",
		C2SUseProp : "pb.C2SUseProp",
		S2CUseProp : "pb.S2CUseProp",
		S2CPropUpdate : "pb.S2CPropUpdate",
		S2CDelProp : "pb.S2CDelProp",
		C2SAutoUseProp : "pb.C2SAutoUseProp",
		C2SPropTableState : "pb.C2SPropTableState",
		S2CPropTableState : "pb.S2CPropTableState",
		C2SGetZb : "pb.C2SGetZb",
		S2CGetZb : "pb.S2CGetZb",
		PropItem : "pb.PropItem",
		C2SRaces : "pb.C2SRaces",
		S2CRaces : "pb.S2CRaces",
		S2CCurRace : "pb.S2CCurRace",
		C2SEnrollRace : "pb.C2SEnrollRace",
		S2CEnrollRace : "pb.S2CEnrollRace",
		C2SUndoEnrollRace : "pb.C2SUndoEnrollRace",
		S2CUndoEnrollRace : "pb.S2CUndoEnrollRace",
		C2SRaceChampionship : "pb.C2SRaceChampionship",
		S2CRaceChampionship : "pb.S2CRaceChampionship",
		S2CRaceNewChampionship : "pb.S2CRaceNewChampionship",
		C2SMyRaceReward : "pb.C2SMyRaceReward",
		MyRaceReward : "pb.MyRaceReward",
		S2CMyRaceReward : "pb.S2CMyRaceReward",
		S2CPlayRaceNotice : "pb.S2CPlayRaceNotice",
		C2SWaitRacePlay : "pb.C2SWaitRacePlay",
		WaitRaceInfo : "pb.WaitRaceInfo",
		S2CWaitRacePlay : "pb.S2CWaitRacePlay",
		S2CPlayRaceCountdown : "pb.S2CPlayRaceCountdown",
		S2CRaceStartFail : "pb.S2CRaceStartFail",
		RacePhaseInfo : "pb.RacePhaseInfo",
		S2CRacePhase : "pb.S2CRacePhase",
		S2CRacePlay : "pb.S2CRacePlay",
		S2CRaceWaitMatch : "pb.S2CRaceWaitMatch",
		S2CRaceWaitRoundEnd : "pb.S2CRaceWaitRoundEnd",
		RaceRankInfo : "pb.RaceRankInfo",
		S2CRaceRank : "pb.S2CRaceRank",
		RaceThrough : "pb.RaceThrough",
		S2CRaceThrough : "pb.S2CRaceThrough",
		RaceSettle : "pb.RaceSettle",
		S2CRaceSettle : "pb.S2CRaceSettle",
		C2SGetRaceTop : "pb.C2SGetRaceTop",
		S2CGetRaceTop : "pb.S2CGetRaceTop",
		C2SExitRace : "pb.C2SExitRace",
		S2CExitRace : "pb.S2CExitRace",
		RaceRewardDesc : "pb.RaceRewardDesc",
		RaceReward : "pb.RaceReward",
		ChampionItem : "pb.ChampionItem",
		PlayRaceNotice : "pb.PlayRaceNotice",
		EnrollLimit : "pb.EnrollLimit",
		RaceShowItem : "pb.RaceShowItem",
		GeneralRaceRank : "pb.GeneralRaceRank",
		C2SGetRankList : "pb.C2SGetRankList",
		S2CGetRankList : "pb.S2CGetRankList",
		C2SGetRankReward : "pb.C2SGetRankReward",
		C2SRankRewardCfgs : "pb.C2SRankRewardCfgs",
		S2CRankRewardCfgs : "pb.S2CRankRewardCfgs",
		RankItem : "pb.RankItem",
		CatRankItem : "pb.CatRankItem",
		RankRewardCfg : "pb.RankRewardCfg",
		S2CRedDotChange : "pb.S2CRedDotChange",
		S2CSafeBox : "pb.S2CSafeBox",
		C2SInSafeBox : "pb.C2SInSafeBox",
		S2CInSafeBox : "pb.S2CInSafeBox",
		C2SOutSafeBox : "pb.C2SOutSafeBox",
		S2COutSafeBox : "pb.S2COutSafeBox",
		C2SGetScoreTop : "pb.C2SGetScoreTop",
		S2CGetScoreTop : "pb.S2CGetScoreTop",
		C2SGetScoreRewardList : "pb.C2SGetScoreRewardList",
		S2CGetScoreRewardList : "pb.S2CGetScoreRewardList",
		C2SGetScoreReward : "pb.C2SGetScoreReward",
		S2CGetScoreReward : "pb.S2CGetScoreReward",
		C2SWithdrawScore : "pb.C2SWithdrawScore",
		S2CWithdrawScore : "pb.S2CWithdrawScore",
		C2SHfqRecharge : "pb.C2SHfqRecharge",
		S2CHfqRecharge : "pb.S2CHfqRecharge",
		C2SWithdrawScoreLog : "pb.C2SWithdrawScoreLog",
		S2CWithdrawScoreLog : "pb.S2CWithdrawScoreLog",
		C2SGetHfqRechargeLog : "pb.C2SGetHfqRechargeLog",
		S2CGetHfqRechargeLog : "pb.S2CGetHfqRechargeLog",
		C2SGetScoreRewardCfgs : "pb.C2SGetScoreRewardCfgs",
		S2CGetScoreRewardCfgs : "pb.S2CGetScoreRewardCfgs",
		ScoreTopData : "pb.ScoreTopData",
		ScoreData : "pb.ScoreData",
		ScoreTopSaveData : "pb.ScoreTopSaveData",
		PayScoreData : "pb.PayScoreData",
		ScoreTopReward : "pb.ScoreTopReward",
		ScoreTopRewardEx : "pb.ScoreTopRewardEx",
		WithScoreLogItem : "pb.WithScoreLogItem",
		HfqRechargeLogItem : "pb.HfqRechargeLogItem",
		C2SGetIdlePlayers : "pb.C2SGetIdlePlayers",
		PlayerBaseInfo : "pb.PlayerBaseInfo",
		S2CGetIdlePlayers : "pb.S2CGetIdlePlayers",
		C2SInvitePlay : "pb.C2SInvitePlay",
		InviteTarget : "pb.InviteTarget",
		S2CInviteNotify : "pb.S2CInviteNotify",
		C2SInviteNotify : "pb.C2SInviteNotify",
		S2CInviteRefuse : "pb.S2CInviteRefuse",
		S2CSeason : "pb.S2CSeason",
		C2SSeasonRankList : "pb.C2SSeasonRankList",
		S2CSeasonRankList : "pb.S2CSeasonRankList",
		C2SGetDuanWeiReward : "pb.C2SGetDuanWeiReward",
		S2CGetDuanWeiReward : "pb.S2CGetDuanWeiReward",
		C2SGetSeasonReward : "pb.C2SGetSeasonReward",
		S2CGetSeasonReward : "pb.S2CGetSeasonReward",
		S2CDuanWeiChange : "pb.S2CDuanWeiChange",
		S2CDuanWeiReset : "pb.S2CDuanWeiReset",
		DuanWeiRewardCfg : "pb.DuanWeiRewardCfg",
		C2SGetSeasonDuanWeiCfg : "pb.C2SGetSeasonDuanWeiCfg",
		S2CGetSeasonDuanWeiCfg : "pb.S2CGetSeasonDuanWeiCfg",
		C2SGetSeasonRewardCfg : "pb.C2SGetSeasonRewardCfg",
		S2CGetSeasonRewardCfg : "pb.S2CGetSeasonRewardCfg",
		C2SSeasonHisRankList : "pb.C2SSeasonHisRankList",
		S2CSeasonHisRankList : "pb.S2CSeasonHisRankList",
		SeasonCfg : "pb.SeasonCfg",
		SeasonRankItem : "pb.SeasonRankItem",
		SeasonRewardCfg : "pb.SeasonRewardCfg",
		PlayerSeasonData : "pb.PlayerSeasonData",
		SeasonRankListItem : "pb.SeasonRankListItem",
		SeasonRankList : "pb.SeasonRankList",
		C2SGetShopItems : "pb.C2SGetShopItems",
		CatShopItem : "pb.CatShopItem",
		S2CGetShopItems : "pb.S2CGetShopItems",
		C2SBuyShopItem : "pb.C2SBuyShopItem",
		S2CBuyShopItem : "pb.S2CBuyShopItem",
		S2CPortFrames : "pb.S2CPortFrames",
		C2SSetBuyCb : "pb.C2SSetBuyCb",
		C2SGetZbShopItems : "pb.C2SGetZbShopItems",
		S2CGetZbShopItems : "pb.S2CGetZbShopItems",
		ShopItem : "pb.ShopItem",
		ZbShopSubItem : "pb.ZbShopSubItem",
		ZbShopItem : "pb.ZbShopItem",
		S2CShowItems : "pb.S2CShowItems",
		C2SShowItemsReply : "pb.C2SShowItemsReply",
		C2SGetShowItems : "pb.C2SGetShowItems",
		S2CShowBox : "pb.S2CShowBox",
		C2SCloseShowBox : "pb.C2SCloseShowBox",
		BoxData : "pb.BoxData",
		PaiMing : "pb.PaiMing",
		C2SGetTables : "pb.C2SGetTables",
		CatTable : "pb.CatTable",
		QuickStart : "pb.QuickStart",
		S2CGetTables : "pb.S2CGetTables",
		C2SMatchTable : "pb.C2SMatchTable",
		C2SNextMatch : "pb.C2SNextMatch",
		C2SExitMatch : "pb.C2SExitMatch",
		S2CExitMatch : "pb.S2CExitMatch",
		C2SJoinTable : "pb.C2SJoinTable",
		S2CEnterTable : "pb.S2CEnterTable",
		C2SExitTable : "pb.C2SExitTable",
		S2CExitTable : "pb.S2CExitTable",
		S2CMatchUpdate : "pb.S2CMatchUpdate",
		S2CServiceFee : "pb.S2CServiceFee",
		S2CTablePlayer : "pb.S2CTablePlayer",
		C2SReqTableInfo : "pb.C2SReqTableInfo",
		S2CGoOnGame : "pb.S2CGoOnGame",
		C2SUILoaded : "pb.C2SUILoaded",
		S2CTipMsg : "pb.S2CTipMsg",
		C2STrueNameAuth : "pb.C2STrueNameAuth",
		S2CTrueNameAuth : "pb.S2CTrueNameAuth",
		C2SSetGender : "pb.C2SSetGender",
		S2CSetGender : "pb.S2CSetGender",
		C2SHideMe : "pb.C2SHideMe",
		S2CHideMe : "pb.S2CHideMe",
		C2SSetName : "pb.C2SSetName",
		S2CSetName : "pb.S2CSetName",
		C2SSetPortraits : "pb.C2SSetPortraits",
		S2CSetPortraits : "pb.S2CSetPortraits",
		C2SSetPortBorder : "pb.C2SSetPortBorder",
		S2CSetPortBorder : "pb.S2CSetPortBorder",
		C2SLocat : "pb.C2SLocat",
		C2SGetYinLiuReward : "pb.C2SGetYinLiuReward",
		S2CGetYinLiuReward : "pb.S2CGetYinLiuReward",
		C2SVipCfgs : "pb.C2SVipCfgs",
		S2CVipCfgs : "pb.S2CVipCfgs",
		C2SGetVipReward : "pb.C2SGetVipReward",
		S2CGetVipReward : "pb.S2CGetVipReward",
		C2SGetVipDayReward : "pb.C2SGetVipDayReward",
		S2CGetVipDayReward : "pb.S2CGetVipDayReward",
		S2CVipChange : "pb.S2CVipChange",
		VipPlayerBase : "pb.VipPlayerBase",
		S2CVipLogin : "pb.S2CVipLogin",
		VipCfg : "pb.VipCfg",
		C2SZaiXianInfo : "pb.C2SZaiXianInfo",
		S2CZaiXianInfo : "pb.S2CZaiXianInfo",
		C2SZaiXianReward : "pb.C2SZaiXianReward",
		S2CZaiXianReward : "pb.S2CZaiXianReward",
		ZaiXianData : "pb.ZaiXianData",
		C2SZhanJi : "pb.C2SZhanJi",
		C2SZhanJiTableInfo : "pb.C2SZhanJiTableInfo",
		S2CZhanJiTableInfo : "pb.S2CZhanJiTableInfo",
		S2CZhanJi : "pb.S2CZhanJi",
		ZhanJiTable : "pb.ZhanJiTable",
		ZhanJiData : "pb.ZhanJiData",
	}
}